<resources>
    <string name="app_name">SecQR</string>
    <string name="logo">LOGO</string>
    <string name="manual_qr_generate">Manual QR Generate</string>
    <string name="automatic_qr_generate">Automatic QR Generate</string>
    <string name="history">History</string>
    <string name="secqr_icon">SecQR Icon</string>
    <string name="secqure_your_vehicle_data_with_secqr_now">Secqure your Vehicle Data with SecQR Now !</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="name">Name:</string>
    <string name="name_">Name</string>
    <string name="username">Username</string>
    <string name="email">Email:</string>
    <string name="email_">Email</string>
    <string name="useremail">userEmail</string>
    <string name="user_id">User ID: </string>
    <string name="userid">userid</string>
    <string name="mobile_no_91">Mobile No: +91</string>
    <string name="_8888888888"> 8888888888</string>
    <string name="user_category">User Category:</string>
    <string name="public_default">Public (Default)</string>
    <string name="enter_new_name">(Enter New Name)</string>
    <string name="enter_new_mobile_no">(Enter New Mobile No)</string>
    <string name="save">Save</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="registration_number">Registration Number</string>
    <string name="vehicle_class_eg_car_scooter">Vehicle Class (eg. Car, Scooter)</string>
    <string name="vehicle_registration_state">Vehicle Registration State</string>
    <string name="model_number">Model Number</string>
    <string name="manufacturing_year">Manufacturing Year</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="engine_number">Engine Number</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="owner_information">Owner Information</string>
    <string name="owner_name">Owner Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="owner_category_eg_individual">Owner Category (eg. Individual)</string>
    <string name="driving_licence_number">Driving Licence Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="contact_e_mail">Contact E-mail</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="insurance_from">Insurance From</string>
    <string name="insurance_upto">Insurance Upto</string>
    <string name="policy_number">Policy Number</string>
    <string name="other_information">Other Information</string>
    <string name="financer_name">Financer Name</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="share">Share</string>
    <string name="secqr">SecQR</string>
    <string name="vigyaan">Vigyaan</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="i_hereby_declare_my_consent_agreement_for_fetching_my_information_via_your_xyz_api">I hereby declare my consent agreement for fetching my information via YOUR-XYZ API</string>
    <string name="fetch_vehicle_info">Fetch Vehicle Info</string>
    <string name="qr">QR</string>
    <string name="qr_code_generated">QR Code Generated !</string>
    <string name="call_112">Call 112</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number_found">Phone Number Found !</string>
    <string name="call_owner">Call Owner</string>
    <string name="message_owner">Message Owner</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_as_a_guest">Login as a guest !</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="reg_number"> Regn..Number</string>
    <string name="vehicle_type"> Vehicle Type</string>
    <string name="date"> Date</string>
    <string name="mobile_number">Mobile number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Existing User ?</string>
    <string name="sign_up">Sign up</string>
</resources>