<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
             android:src="@drawable/secqr_logo"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="55dp"
            android:layout_marginStart="60dp"
            android:gravity="center">
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/manual_qr_generate"
                android:id="@+id/qrGenerate"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/automatic_qr_generate"
                android:id="@+id/btnVehicleInfo"
                android:backgroundTint="#38A3A2"/>
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:id="@+id/btnHistory"
                android:backgroundTint="#11B2B0"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/app_color"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qrCustomScanner"
        android:backgroundTint="@color/app_color"
        android:src="@drawable/qr_scan"
        app:fabCustomSize="70dp"
        app:maxImageSize="40dp"
        app:layout_anchor="@id/bottomAppBar"
        android:contentDescription="@string/secqr_icon" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>